# leafbuild

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  .rusty-hook.toml  404.html  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.adoc  README.md  README.tpl  bors.toml  build.ninja  highlight.js  index.html  introduction.html  motivation.html  print.html  project_model.html  quick_start.html  roadmap.html  searchindex.js  searchindex.json  supported_languages.html  syntax.html  validation_checks.html
.circleci/: config.yml
crates/leafbuild-syntax/: Cargo.toml  grammar.ron  syntax.ungram
crates/leafbuild-syntax/benches/: parser.rs
crates/leafbuild-syntax/parser_tests_snaps/: leafbuild_syntax__tests__parse_output__assignment.snap  leafbuild_syntax__tests__parse_output__assignment_expr_on_next_line.snap  leafbuild_syntax__tests__parse_output__break_with_value.snap  leafbuild_syntax__tests__parse_output__break_with_value_on_new_line.snap  leafbuild_syntax__tests__parse_output__break_without_value.snap  leafbuild_syntax__tests__parse_output__continue_test.snap  leafbuild_syntax__tests__parse_output__declaration.snap  leafbuild_syntax__tests__parse_output__empty_struct.snap  leafbuild_syntax__tests__parse_output__expr_with_binary_infix_operators_on_next_line.snap  leafbuild_syntax__tests__parse_output__expr_with_binary_infix_operators_on_same_line_and_second_operand_on_second_line.snap  leafbuild_syntax__tests__parse_output__foreach_basic.snap  leafbuild_syntax__tests__parse_output__freestanding_expr.snap  leafbuild_syntax__tests__parse_output__if_condition_in_expr.snap  leafbuild_syntax__tests__parse_output__if_condition_in_expr_stretched.snap  leafbuild_syntax__tests__parse_output__if_condition_on_next_line.snap  leafbuild_syntax__tests__parse_output__if_else_condition.snap  leafbuild_syntax__tests__parse_output__if_else_if_else_condition.snap  leafbuild_syntax__tests__parse_output__if_else_if_else_condition_stretched.snap  leafbuild_syntax__tests__parse_output__index_on_second_line_is_array_lit_expr.snap  leafbuild_syntax__tests__parse_output__named_args_only_function_call.snap  leafbuild_syntax__tests__parse_output__precedence_parsing.snap  leafbuild_syntax__tests__parse_output__return_with_value.snap  leafbuild_syntax__tests__parse_output__return_with_value_on_new_line.snap  leafbuild_syntax__tests__parse_output__return_without_value.snap  leafbuild_syntax__tests__parse_output__simple_function_call.snap  leafbuild_syntax__tests__parse_output__struct_with_field_and_generics.snap  leafbuild_syntax__tests__parse_output__struct_with_one_field.snap  leafbuild_syntax__tests__parse_output__unit_to_unit_assignment.snap  leafbuild_syntax__tests__parse_output__var_declaration_with_proper_expr_as_value.snap
crates/leafbuild-syntax/src/: ast.rs  grammar.ron  lexer.rs  lib.rs  syn_tree.rs  syntax_kind.rs  syntax_kind_new.rs
crates/leafbuild-syntax/src/ast/: expr_ext.rs  implnew.rs  stmt_ext.rs  support.rs
crates/leafbuild-syntax/src/parser/: error.rs  event.rs  marker.rs  mod.rs  text_token_source.rs  text_tree_sink.rs  token_source.rs  tree_sink.rs
crates/leafbuild-syntax/src/syn_tree/: implementation.rs  visitor.rs
crates/leafbuild-syntax/src/syn_tree/visitor/: tests.rs
ghk/: Cargo.toml
ghk/src/: lib.rs
git/: Cargo.toml
git/hooks/: commit-msg  pre-commit
git/rust/: verify_commit_message.rs
leafbuild-ast/: Cargo.toml
leafbuild-ast/src/: ast.rs  lib.rs  span.rs  token_data.rs
leafbuild-cmakeml/: Cargo.toml
leafbuild-cmakeml/src/: lib.rs
leafbuild-core/: Cargo.toml
leafbuild-core/src/: lf_buildsys.rs  lib.rs
leafbuild-core/src/diagnostics/: mod.rs
leafbuild-core/src/utils/: and_then_do.rs  let.rs  mod.rs  some_none_if.rs  some_none_if_owned.rs  take_if_unless.rs  take_if_unless_owned.rs
leafbuild-derive/: Cargo.toml
leafbuild-derive/src/: derive_ast_node.rs  derive_ast_token.rs  lib.rs
leafbuild-interpreter/: Cargo.toml
leafbuild-interpreter/src/: env.rs  lib.rs  mod_name.rs
leafbuild-interpreter/src/diagnostics/: errors.rs  mod.rs
leafbuild-interpreter/src/diagnostics/errors/: parse_error.rs
leafbuild-interpreter/src/internal/: eval.rs  mod.rs  repr.rs
leafbuild-interpreter/src/internal/fun/: mod.rs  module.rs  project.rs
leafbuild-interpreter/src/internal/values/: bool.rs  builtin.rs  i32.rs  i64.rs  mod.rs  module.rs  num.rs  primitives.rs  project.rs  types.rs  u32.rs  u64.rs  unit.rs
leafbuild-parser/: Cargo.toml  Makefile.toml
leafbuild-parser/benches/: parser.rs
leafbuild-parser/src/: leafparser.lalrpop  lexer.rs  lib.rs
leafbuild_interpreter/: Cargo.toml
leafbuild_interpreter/src/: env.rs  lib.rs
leafbuild_interpreter/src/diagnostics/: errors.rs  mod.rs
leafbuild_interpreter/src/diagnostics/errors/: parse_error.rs
leafbuild_interpreter/src/handle/: mod.rs
leafbuild_interpreter/src/internal/: mod.rs
leafbuild_interpreter/src/internal/values/: mod.rs
leafbuild_parser/: Cargo.toml  build.rs
leafbuild_parser/src/: leafparser.lalrpop  lexer.rs  lib.rs
libleaf/: Cargo.toml  README.adoc
libleaf/src/: lib.rs
libleaf/src/grammar/: ast.rs  leafparser.lalrpop  leafparser.rs  lexer.rs  mod.rs
libleaf/src/handle/: mod.rs
libleaf/src/interpreter/: global_functions.rs  interpreter_internal.rs  mod.rs  ops.rs  prelude_values.rs
libleaf/src/interpreter/diagnostics/: diagnostics.rs
libleaf/src/interpreter/errors/: diagnostics.rs  errors.rs  errors_ctx.rs
libleaf/src/interpreter/functions/: executable.rs  library.rs  mod.rs  module.rs  print.rs  project.rs
libleaf/src/interpreter/ninja_gen/: mod.rs
libleaf/src/interpreter/types/: dependency.rs  error.rs  executable.rs  int.rs  library.rs  map.rs  map_pair.rs  mod.rs  string.rs  target_properties.rs  vec.rs  void.rs
xtask/: Cargo.toml
xtask/src/: docs.rs  grammar.rs  lib.rs  main.rs
xtask/src/cmd/: mod.rs
xtask/src/format/: mod.rs
xtask/src/git_hooks/: mod.rs
xtask/src/grammar/: ast_src.rs  kinds.rs  lexer.rs  lower.rs  syn_tree_implementation.rs  visitors.rs
xtask/src/lint/: mod.rs
xtask/src/test/: mod.rs
(+430 files in other folders)
