[package]
name = "leafbuild"
description = "A WIP C/C++ buildsystem."
version = "0.0.1-dev.1"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/leafbuild/leafbuild"
documentation = "https://leafbuild.github.io/docs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "interpreter", "command-line"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["c", "cpp", "cmake-ml"]

c = []
cpp = ["c"]

ml = []

cmake-ml = ["c", "ml"]
meson-ml = ["ml"]

[dependencies]
itertools = "0.10"
regex = "1"
codespan-reporting = "0.11"
term = "0.6"
termcolor = "1.1"
clap = "3.0.0-beta.2"
which = "4.0"
thiserror = "1.0"
derivative = "2.1"
chrono = "0.4"
ansi_term = "0.12"
atty = "0.2"
derive-new = "0.5"
lalrpop-util = "0.19"

tracing = "0.1"
tracing-subscriber = "0.2"

leafbuild_derive = { path = "leafbuild_derive", version = "0.1.0" }
leafbuild_ast = { path = "leafbuild_ast", version = "0.1.0" }
leafbuild_parser = { path = "leafbuild_parser", version = "0.1.0" }
leafbuild_interpreter = { path = "leafbuild_interpreter", version = "0.1.0" }

[workspace]
members = [
    "leafbuild_derive",
    "leafbuild_ast",
    "leafbuild_parser",
    "leafbuild_interpreter",
    "ghk",
    "leafbuild_ghk",
]