[package]
name = "leafbuild"
description = "A WIP C/C++ buildsystem."
version = "0.0.1-dev.1"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/leafbuild/leafbuild"
documentation = "https://leafbuild.github.io/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "interpreter", "command-line"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["c", "cpp", "cmake-ml"]

c = []
cpp = ["c"]

ml = ["leafbuild-ml"]

cmake-ml = ["c", "ml", "leafbuild-cmakeml"]
meson-ml = ["ml", "leafbuild-mesonml"]
premake-ml = ["ml", "leafbuild-premakeml"]

[dependencies]
itertools = "0.10"
regex = "1"
codespan-reporting = "0.11"
term = "0.7"
termcolor = "1.1"
clap = "3.0.0-beta.2"
which = "4.0"
thiserror = "1.0"
derivative = "2.1"
chrono = "0.4"
ansi_term = "0.12"
atty = "0.2"
lalrpop-util = "0.19"

tracing = "0.1"
tracing-subscriber = "0.2"

leafbuild-core = { path = "leafbuild-core", version = "0.1.0" }
leafbuild-derive = { path = "leafbuild-derive", version = "0.1.0" }
leafbuild-ast = { path = "leafbuild-ast", version = "0.1.0" }
leafbuild-parser = { path = "leafbuild-parser", version = "0.1.0" }
leafbuild-syntax = { path = "leafbuild-syntax", version = "0.1.0" }
leafbuild-interpreter = { path = "leafbuild-interpreter", version = "0.1.0" }

[dependencies.leafbuild-ml]
optional = true
version = "0.1.0"
path = "leafbuild-ml"

[dependencies.leafbuild-cmakeml]
optional = true
version = "0.1.0"
path = "leafbuild-cmakeml"

[dependencies.leafbuild-mesonml]
optional = true
version = "0.1.0"
path = "leafbuild-mesonml"

[dependencies.leafbuild-premakeml]
optional = true
version = "0.1.0"
path = "leafbuild-premakeml"

[workspace]
default-members = [
    "leafbuild-core",
    "leafbuild-derive",
    "leafbuild-ast",
    "leafbuild-parser",
    "leafbuild-syntax",
    "leafbuild-interpreter",
]
members = [
    "leafbuild-core",
    "leafbuild-derive",
    "leafbuild-ast",
    "leafbuild-parser",
    "leafbuild-syntax",
    "leafbuild-interpreter",

    "leafbuild-ml",
    "leafbuild-cmakeml",
    "leafbuild-mesonml",
    "leafbuild-premakeml",
    "ghk",
    "leafbuild-ghk",
]
