[package]
name = "ghk"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unindent = { version = "0.1", optional = true }

[features]
default = ["unindent-scripts"]

unindent-scripts = ["unindent"]