[package]
name = "leafbuild-git-utils"
version = "0.0.1"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/leafbuild/leafbuild"
documentation = "https://leafbuild.github.com/docs"

[[bin]]
name = "verify_commit_message"
path = "rust/verify_commit_message.rs"
