[package]
name = "leafbuild-ast"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5"
leafbuild-derive = { path = "../leafbuild-derive", version = "0.1.0" }
snailquote = "0.3"
