[package]
name = "leafbuild-cmakeml"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "0.2"

leafbuild-core = { path = "../leafbuild-core", version = "0.1.0" }
leafbuild-ml = { path = "../leafbuild-ml", version = "0.1.0" }
