[package]
name = "leafbuild-core"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
itertools = "0.10"
codespan-reporting = "0.11"
thiserror = "1.0"