[package]
name = "leafbuild-derive"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"