[package]
name = "leafbuild_parser"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafbuild_ast = { path = "../leafbuild_ast", version = "0.1.0" }
lalrpop-util = "0.19"
logos = "0.11"

[dev-dependencies]
unindent = "0.1"
itertools = "0.10"

[build-dependencies]
lalrpop = "0.19"