[package]
name = "libleaf"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi001@gmail.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
libleafcore = { path = "../libleafcore" }
lalrpop-util = "0.19"
regex = "1"
[build-dependencies]
lalrpop = "0.19"
