[package]
name = "libleaf"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi001@gmail.com>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["angry-errors"]

angry-errors = []

[dependencies]
itertools = "0.9"
libleafcore = { path = "../libleafcore" }
lalrpop-util = "0.19"
regex = "1"
codespan-reporting = "0.9"
term = "0.6"
unindent = "0.1"
termcolor = "1.1"

[build-dependencies]
lalrpop = "0.19"
