[package]
name = "xtask"
version = "0.1.0"
authors = ["Dinu Blanovschi <dinu.blanovschi@criptext.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
walkdir = "2.3"
syn = { version = "1.0", default-features = false, features = ["printing"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10"
path-calculate = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
ungrammar = "1.13"

cmd = { path = "../cmd" }
ghk = { path = "../ghk" }
